存在しないディレクトリを -L に指定しないようにした。 ていうか pkg-config 使うべきだよね。

--- a/src/Makefile
+++ b/src/Makefile
@@ -5,7 +5,7 @@ OBJS = main.o screen_tty.o screen_x11.o game.o play.o
 all: cgp
 
 cgp: $(OBJS)
-	$(CC) -o $@ $(OBJS) -L/usr/X11R6/lib -lXpm -lXext -lX11 -lcurses -lpthread
+	$(CC) -o $@ $(OBJS) -lXpm -lXext -lX11 -lcurses -lpthread
 
 clean:
 	-rm -f *.o cgp
